test/cgip/PP/error/instvars/instvars-17.res
Run-Time Error 230: Name unknown
